--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -3,3 +3,9 @@ APP_NAME = testapp
 GRANT_TYPE= client_credentials
 CLIENT_ID = YXA6Irz_oI-GEead-FFvbfaMbQ
 CLIENT_SECRET = YXA6VsR5JypETS3iPFvNNxYklmho0Vw
+
+#ORG_NAME = 1175170818115802
+#APP_NAME = lovezzu
+#GRANT_TYPE= client_credentials
+#CLIENT_ID = YXA6gZrcsIlIEeeerTniVDQXLQ
+#CLIENT_SECRET = YXA64R4TeXevmVd7FT62bZS235c8cIs
